<resources>
    <string name="app_name">4Students</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="ltimo_nome">Último Nome</string>
    <string name="tipo_de_utilizador">Tipo de utilizador:</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="bem_vindo_ao">Bem-vindo ao</string>
    <string name="o_teu_assistente_escolar_para_te_ajudar_a_manteres_te_organizado_e_alcan_ares_o_sucesso">O teu assistente escolar que vai ajudar-te a manteres-te organizado e alcançares o sucesso.</string>
    <string name="continuar">Continuar</string>
    <string name="preencher_todos_os_campos">* Preencher todos os campos</string>
    <string name="erro_primeiro_nome">Primeiro Nome*</string>
    <string name="seguinte">Seguinte</string>
    <string name="voltar">Voltar</string>
    <string name="erro_ultimo_nome">Último Nome*</string>
    <string name="registo">Registo</string>
    <string name="n_de_periodos_de_aulas">Nº de períodos de aulas</string>
    <string name="inicio">Início</string>
    <string name="fim">Fim</string>
    <string name="_1_periodo">1º Período</string>
    <string name="_2_periodo">2º Período</string>
    <string name="_3_periodo">3º Período</string>
    <string name="erro_datas_seguintes_maiores_anteriores">* As datas seguintes têm de ser maiores que as anteriores</string>
    <string name="finalizar">Finalizar</string>
    <string name="adicionar_disciplina">Adicionar disciplina</string>
    <string name="adicionar_turma">Adicionar turma</string>
    <string name="sem_disciplinas">Sem disciplinas</string>
    <string name="sem_turmas">Sem turmas</string>
    <string name="txt_reg3_aluno">Podes definir agora as tuas disciplinas, clicando no botão de adicionar (se não quiseres registar já, apenas clica em \'Finalizar\'). Podes ainda escolher o sistema de classificação a que estás sujeito.</string>
    <string name="txt_reg3_prof">Pode definir agora as suas turmas, clicando no botão de adicionar (se não quiser registar já, apenas clique em \'Finalizar\').</string>
    <string name="sistema_de_classifica_o">Sistema de Classificação</string>
    <string name="nome_da_disciplina">Nome da Disciplina</string>
    <string name="abreviatura_da_disciplina">Abreviatura da Disciplina</string>
    <string name="max_3_cara">(max. 3 cara.)</string>
    <string name="sala">Sala</string>
    <string name="usar_crit_rios_de_avalia_o_existentes">Usar Critérios de Avaliação Existentes</string>
    <string name="criar_crit_rios_de_avalia_o">Criar Critérios de Avaliação</string>
    <string name="adicionar_turma_titulo">Adicionar Turma</string>
    <string name="adicionar_disciplina_titulo">Adicionar Disciplina</string>
    <string name="adicionar_disciplina_add">Adicionar Disciplina</string>
    <string name="nome_da_turma">Nome da Turma</string>
    <string name="identifica_o_da_turma">Identificação da Turma</string>
    <string name="adicionar_turma_add">Adicionar Turma</string>
    <string name="nome_disciplina_erro">Nome da disciplina*</string>
    <string name="abreviatura_disciplina_erro">Abreviatura da Disciplina*</string>
    <string name="sala_erro">Sala*</string>
    <string name="nome_turma_erro">Nome da Turma*</string>
    <string name="identificacao_turma_erro">Identificação da Turma*</string>
    <string name="escolha_os_criterios">Escolha os critérios</string>
    <string name="registar_alunos_opcional">Registar Alunos (opcional)</string>
    <string name="escolha_os_crit_rios_de_avalia_o_opcional">Escolha os critérios de avaliação (opcional)</string>
    <string name="pode_adicionar_os_alunos_a_qualquer_momento_ap_s_o_registo">*Pode adicionar os alunos a qualquer momento após o registo</string>
    <string name="registar_alunos">Registar Alunos</string>
    <string name="adicionar_turma_sem_registar_alunos">Adicionar Turma sem Registar Alunos</string>
    <string name="erro_codturmajregistado">*Já está registada uma turma com esta identificação</string>
    <string name="erro_codalujaregistado">*Já está registada uma disciplina com esta abreviatura</string>
    <string name="registar_alunos_titulo">Registar Alunos</string>
    <string name="avan_ar">Avançar</string>
    <string name="adicionar_aluno">Adicionar Aluno</string>
    <string name="aluno_selecionado">Aluno Selecionado:</string>
    <string name="nenhum">Nenhum</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="sem_alunos">Sem alunos</string>
    <string name="nenhum_aluno_selecionado">Nenhum aluno selecionado</string>
    <string name="numero">Número</string>
    <string name="nome">Nome</string>
    <string name="adicionar">Adicionar</string>
    <string name="erro_num_aluno">Número*</string>
    <string name="erro_nome_aluno">Nome*</string>
    <string name="erro_ja_exi_alu_num">* Já existe um aluno com este número</string>
    <string name="editar_aluno">Editar Aluno</string>
    <string name="criar">Criar</string>
    <string name="CA_nome_predefinido">Critérios de Avaliação</string>
    <string name="erro_ca_jareg">Já estão registados critérios de avaliação com este nome</string>
    <string name="nao_tem_ca">Não tem nenhuns critérios de avaliação adicionados</string>
    <string name="par_metro">Parâmetro</string>
    <string name="cota_o">Cotação (%)</string>
    <string name="adicionar_par_metro">Adicionar Parâmetro</string>
    <string name="sem_par_metros">Sem parâmetros</string>
    <string name="erro_cot_mai_100">A cotação não pode ser maior que 100%</string>
    <string name="erro_cotacao_total">A cotação total tem que ser 100%</string>
    <string name="editar_par_metro">Editar Parâmetro</string>
    <string name="erro_cot_0">A cotação não pode ser 0%</string>
    <string name="nome_">Nome:</string>
    <string name="identificacao_">Identificação:</string>
    <string name="sala_">Sala:</string>
    <string name="detalhes_da_turma">Detalhes da Turma</string>
    <string name="criterios_avaliacao_">Critérios de Avaliação:</string>
    <string name="sistema_classificacao_">Sistema de Classificação:</string>
    <string name="n_mero_de_alunos_">Número de Alunos:</string>
    <string name="fechar">Fechar</string>
    <string name="abreviatura_">Abreviatura:</string>
    <string name="detalhes_da_disciplina">Detalhes da Disciplina</string>
    <string name="sc1">0 a 20</string>
    <string name="sc2">1 a 5</string>
    <string name="sc3">0 a 100</string>
    <string name="sc4">0 a 200</string>
    <string name="sc5">0 a 10</string>
    <string name="titulo_eliminar_disciplina">Eliminar Disciplina</string>
    <string name="certeza_del_disciplina">Tem a certeza que deseja eliminar esta disciplina?</string>
    <string name="titulo_eliminar_turma">Eliminar Turma</string>
    <string name="certeza_del_turma">Tem a certeza que deseja eliminar esta turma?</string>
    <string name="abreviatura">Abreviatura</string>
    <string name="editar_disciplina_dialog">Editar Disciplina</string>
    <string name="sair">Sair</string>
    <string name="deseja_sair">Deseja sair?</string>
    <string name="agenda">Agenda</string>
    <string name="hor_rio">Horário</string>
    <string name="centro_de_estudo">Centro de Estudo</string>
    <string name="avalia_es">Avaliações</string>
    <string name="defini_es">Definições</string>
    <string name="avalia_o">Avaliação</string>
    <string name="aulas_do_dia">Aulas do dia</string>
    <string name="aulas_de_amanh">Aulas de amanhã</string>
    <string name="sem_aulas">Sem aulas</string>
    <string name="avalia_es_nos_pr_ximos_7_dias">Avaliações nos próximos 7 dias</string>
    <string name="sem_avalia_es">Sem avaliações</string>
    <string name="aulas_de_hoje">Aulas de hoje</string>
    <string-array name="nperiodos">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="sclassificacao">
        <item>0 a 20</item>
        <item>1 a 5</item>
        <item>0 a 100</item>
        <item>0 a 200</item>
        <item>0 a 10</item>
    </string-array>
    <string name="title_activity_horario">Horario</string>
    <string name="horario">Horário</string>
    <string name="segunda_feira">Segunda-feira</string>
    <string name="terca_feira">Terça-feira</string>
    <string name="quarta_feira">Quarta-feira</string>
    <string name="quinta_feira">Quinta-feira</string>
    <string name="sexta_feira">Sexta-feira</string>
    <string name="s_bado">Sábado</string>
    <string name="adicionar_aula">Adicionar aula</string>
    <string name="dia">Dia</string>
    <string name="disciplina_selecionada">Disciplina selecionada:</string>
    <string name="turma_selecionada">Turma selecionada:</string>
    <string name="hora_inicio_erro">Hora de início*</string>
    <string name="hora_fim_erro">Hora de fim*</string>
    <string name="selecionar">Selecionar</string>
    <string name="hora_de_in_cio">Hora de início</string>
    <string name="hora_de_fim">Hora de fim</string>
    <string name="selecionar_uma_disciplina">* Tem que selecionar uma disciplina</string>
    <string name="erro_horas">* Hora inicial tem que ser menor que a final</string>
    <string name="editar_aula">Editar aula</string>
    <string-array name="sdia">
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>
    <string name="title_activity_agenda">Agenda</string>
    <string name="eventos">Eventos</string>
    <string name="aulas">Aulas</string>
    <string name="anota_es">Anotações</string>
    <string name="ir_para_dia_atual">Ir para Dia Atual</string>
    <string name="sem_eventos">Sem eventos</string>
    <string name="sem_anota_es">Sem anotações</string>
    <string name="adicionar_evento">Adicionar Evento</string>
    <string name="das">Das</string>
    <string name="as">às</string>
    <string name="titulo">Título</string>
    <string name="tipo_de_evento">Tipo de evento:</string>
    <string name="outro">Outro</string>
    <string name="notificacao">Notificação</string>
    <string name="descri_o_do_evento">Descrição do evento</string>
    <string name="erro_titulo">Título*</string>
    <string name="erro_hora">Hora*</string>
    <string name="hora">Hora</string>
    <string name="as2">Às</string>
    <string name="as3">às</string>
    <string name="editar_evento">Editar evento</string>
    <string name="detalhes_do_evento">Detalhes do evento</string>
    <string name="titulo_">Título:</string>
    <string name="tipo_">Tipo:</string>
    <string name="notificacao_">Notificação:</string>
    <string name="hora_">Hora:</string>
    <string name="descricao_">Descrição:</string>
    <string name="ativado">Ativado</string>
    <string name="desativado">Desativado</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="salvo_com_sucesso">Salvo com sucesso</string>
    <string name="eliminado_com_sucesso">Eliminado com sucesso</string>
    <string name="title_activity_avaliacao">Avaliacao</string>
    <string name="title_avaliacao">Avaliação</string>
    <string name="disciplina_">Disciplina:</string>
    <string name="turma_">Turma:</string>
    <string name="editar_turma">Editar Turma</string>
    <string name="n_a">N/A</string>
    <string name="_1_per_odo">1º Período:</string>
    <string name="_2_per_odo">2º Período:</string>
    <string name="_3_per_odo">3º Período:</string>
    <string name="dados_do_utilizador">Dados do Utilizador</string>
    <string name="notifica_es">Notificações</string>
    <string name="come_ar_novo_ano_letivo">Começar Novo Ano Letivo</string>
    <string name="website">Website</string>
    <string name="denunciar_bug">Denunciar Bug</string>
    <string name="dar_opini_o">Dar Opinião</string>
</resources>